# Neural-Style-Transfer

./: README.md  create_test_images.py  gpu.py  main.py  main_adam.py  main_lbfgs.py  pyproject.toml  test_engine.py  vgg19model.py
Description/: dataflow.md  engine.md
configs/: default.yaml
src/model/: losses.py  transfer_engine.py  vgg.py
src/utils/: image_processing.py
