[project]
name = "neural-style-transfer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.11.0",
    "pillow>=12.2.0",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "streamlit>=1.59.1",
    "torch>=2.13.0",
    "torchaudio>=2.11.0",
    "torchvision>=0.28.0",
    "tqdm>=4.68.4",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu126" }]
torchvision = [{ index = "pytorch-cu126" }]
torchaudio = [{ index = "pytorch-cu126" }]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
]
